--- a/app/src/main/res/layout/gyminfo_fragment.xml
+++ b/app/src/main/res/layout/gyminfo_fragment.xml
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/social"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,12 +62,20 @@
                 android:layout_height="50sp"
                 android:background="@drawable/twitter"
                />
+
             <ImageButton
                 android:id="@+id/img_button4"
                 android:layout_width="50sp"
                 android:layout_height="50sp"
-                android:background="@drawable/www"
+                android:background="@drawable/www"/>
+
+            <ImageButton
+                android:id="@+id/img_button5"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:background="@drawable/youtube"
                 />
+
         </LinearLayout>
 
         <TextView
