--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GymInfoFragment"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="@color/colorPrimaryDark">
 
     <Button
         android:id="@+id/profile_button_classes"
@@ -27,7 +28,7 @@
         android:id="@+id/separator_profile_1"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:background="@color/app_color_gray"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,8 +38,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/profile_top_text"
+        android:background="@color/colorPrimaryDark"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,7 +55,7 @@
         android:layout_marginTop="57dp"
         android:text="@string/profile_name_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -66,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -89,7 +91,7 @@
         android:layout_marginTop="120dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -103,7 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -124,7 +126,7 @@
         android:layout_marginTop="268dp"
         android:text="@string/profile_height_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -138,7 +140,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -158,7 +160,7 @@
         android:layout_height="wrap_content"
         android:text="@string/profile_weight_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -174,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -196,7 +198,7 @@
         android:layout_marginBottom="168dp"
         android:text="@string/profile_date_started"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -211,7 +213,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="140dp"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -232,7 +234,7 @@
         android:layout_marginBottom="104dp"
         android:text="@string/profile_id"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
