--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -6,14 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GymInfoFragment"
-    tools:layout_editor_absoluteY="81dp">
+    tools:layout_editor_absoluteY="81dp"
+    android:background="@color/colorPrimaryDark">
 
 
     <View
         android:id="@+id/separator_profile_1"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:background="@color/app_color_gray"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -39,7 +40,7 @@
         android:layout_marginTop="84dp"
         android:text="@string/profile_name_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -75,7 +76,7 @@
         android:layout_marginTop="152dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -89,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -107,10 +108,10 @@
         android:id="@+id/profile_height_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="272dp"
         android:text="@string/register_telephone"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.502"
@@ -124,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -145,7 +146,7 @@
         android:layout_marginTop="30dp"
         android:text="@string/register_email"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -160,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#000000"
+        android:textColor="#FFFF"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
