--- a/app/src/main/res/layout/content_admin_menu.xml
+++ b/app/src/main/res/layout/content_admin_menu.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AdminMenu"
-    tools:showIn="@layout/admin_menu_activity">
+    tools:showIn="@layout/admin_menu_activity"
+    android:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/textView2"
@@ -19,6 +20,7 @@
         android:text="Andreas Stylianou"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textColor="#FFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
