--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -17,8 +17,8 @@
             android:layout_centerHorizontal="true"
             android:text="@string/welcome"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/profile_button_style"
+            android:textColor="#FFFF"
+            android:background="@color/colorPrimaryDark"
             android:textAppearance="@color/colorPrimaryDark"
             android:textSize="35sp"
             android:textStyle="bold" />
