--- a/app/src/main/res/layout/activity_client_view.xml
+++ b/app/src/main/res/layout/activity_client_view.xml
@@ -23,9 +23,8 @@
 
        <android.support.v7.widget.RecyclerView
            android:id="@+id/clientList"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           >
+           android:layout_width="398dp"
+           android:layout_height="match_parent">
 
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
