--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -11,24 +11,32 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="150dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:textSize="16dp"
-        android:textStyle="bold" />
+        android:layout_toEndOf="@+id/user_surname"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/user_surname"
-        android:layout_width="140dp"
+        android:layout_width="138dp"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/user_name" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:id="@+id/isActive"
-        android:layout_width="42dp"
+        android:layout_width="45dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
+
+    <TextView
+        android:id="@+id/isActive_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/isActive"
+        android:text="Is Active: " />
 
 </RelativeLayout>
