--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -17,7 +17,7 @@
         android:background="@drawable/profile_button_style"
         android:clickable="false"
         android:text="@string/profile_user_view_classes"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.92"
@@ -268,7 +268,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/profile_button_style"
         android:text="@string/profile_user_reset"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.079"
