--- a/app/src/main/res/layout/content_admin_menu.xml
+++ b/app/src/main/res/layout/content_admin_menu.xml
@@ -35,7 +35,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/profile_button_style"
         android:text="View Classes"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/profile_button_style"
         android:text="Register Client"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/profile_button_style"
         android:text="View Clients"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
