--- a/app/src/main/res/layout/activity_client_view.xml
+++ b/app/src/main/res/layout/activity_client_view.xml
@@ -6,15 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ClientView_Activity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40sp"
-        android:background="@drawable/profile_button_style"
+        android:background="@color/colorPrimary"
         android:text="  Clients"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="25sp" />
 
    <LinearLayout
