--- a/app/src/main/res/layout/content_class.xml
+++ b/app/src/main/res/layout/content_class.xml
@@ -8,15 +8,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ClassActivity"
     android:orientation="vertical"
-    tools:showIn="@layout/activity_class">
+    tools:showIn="@layout/activity_class"
+    android:background="@color/colorPrimaryDark">
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="40sp"
-        android:background="@drawable/profile_button_style"
+        android:background="@color/colorPrimary"
         android:text="  Classes"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="25sp" />
 
     <LinearLayout
