front end changes

--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -40,7 +40,7 @@
         android:text="@string/profile_top_text"
         android:background="@color/colorPrimaryDark"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="#000"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginTop="57dp"
         android:text="@string/profile_name_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginTop="120dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -109,7 +109,7 @@
         android:layout_marginTop="268dp"
         android:text="@string/profile_height_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -123,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="#000"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:text="@string/profile_weight_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -164,7 +164,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="#000"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -190,7 +190,7 @@
         android:layout_marginBottom="168dp"
         android:text="@string/profile_date_started"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -205,7 +205,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="140dp"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="#000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -231,7 +231,7 @@
         android:layout_marginBottom="104dp"
         android:text="@string/profile_id"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
