--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="@string/register"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="#000000"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginTop="84dp"
         android:text="@string/profile_name_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -76,7 +76,7 @@
         android:layout_marginTop="152dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.501"
@@ -111,7 +111,7 @@
         android:layout_marginTop="272dp"
         android:text="@string/register_telephone"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.502"
@@ -146,7 +146,7 @@
         android:layout_marginTop="30dp"
         android:text="@string/register_email"
         android:textAlignment="center"
-        android:textColor="#FFFF"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -183,7 +183,7 @@
         android:layout_marginBottom="88dp"
         android:background="@drawable/profile_button_style"
         android:text="@string/register_register"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
