--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ltd.solutions.software.myt.asfapp.MainActivity">
+    tools:context="ltd.solutions.software.myt.asfapp.MainActivity"
+    android:background="#000000">
 
 
     <android.support.v4.view.ViewPager
