--- a/app/src/main/res/layout/classes_view.xml
+++ b/app/src/main/res/layout/classes_view.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:textColor="@color/app_color_white"
         android:textSize="16dp"
         android:textStyle="bold" />
 
