--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -37,15 +37,17 @@
         android:id="@+id/profile_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/profile_name_label"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/profile_surname_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/profile_top_text" />
 
 
     <TextView
@@ -108,7 +110,6 @@
         android:id="@+id/profile_height_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="272dp"
         android:text="@string/register_telephone"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
@@ -117,7 +118,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="272dp" />
 
 
     <TextView
