--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -110,10 +110,7 @@
         android:id="@+id/profile_height_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< HEAD
-=======
-        android:layout_marginTop="320dp"
->>>>>>> 0ab8cac7b37d36afc8173c4508c86c7ceb56dab0
+        android:layout_marginTop="40dp"
         android:text="@string/register_telephone"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
@@ -122,7 +119,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_weight_label" />
 
 
     <TextView
