--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
@@ -12,10 +12,10 @@
 
     <TextView
         android:id="@+id/user_name"
-        android:layout_width="90dp"
+        android:layout_width="79dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/user_surname"
+        android:layout_centerHorizontal="true"
         android:textSize="16dp" />
 
     <TextView
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
+
 
     <TextView
         android:id="@+id/isActive"
@@ -39,5 +40,14 @@
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/isActive"
         android:text="Is Active: " />
+
+    <TextView
+        android:id="@+id/user_id"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="25dp"
+        android:paddingBottom="10dp"/>
 
 </RelativeLayout>
