--- a/app/src/main/res/layout/admin_class_info_row.xml
+++ b/app/src/main/res/layout/admin_class_info_row.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/name_text_view"
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="Name:"
         tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="1dp" />
+        tools:layout_editor_absoluteY="1dp"
+        android:paddingBottom="15dp"/>
 
     <TextView
         android:id="@+id/surname_text_view"
