done mass edits finished

--- a/app/src/main/res/layout/content_admin_menu.xml
+++ b/app/src/main/res/layout/content_admin_menu.xml
@@ -10,6 +10,24 @@
     tools:showIn="@layout/admin_menu_activity"
     android:background="@color/colorPrimaryDark">
 
+    <Button
+        android:id="@+id/mass_class_edit"
+        android:layout_width="238dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/profile_button_style"
+        android:text="Mass Class Edit"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_btn"
+        app:layout_constraintVertical_bias="0.786" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -61,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/classes_btn"
-        app:layout_constraintVertical_bias="0.205" />
+        app:layout_constraintVertical_bias="0.148" />
 
     <Button
         android:id="@+id/clients_btn"
@@ -79,5 +97,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_btn"
-        app:layout_constraintVertical_bias="0.383" />
+        app:layout_constraintVertical_bias="0.272" />
 </android.support.constraint.ConstraintLayout>
