--- a/app/src/main/res/layout/content_admin_menu.xml
+++ b/app/src/main/res/layout/content_admin_menu.xml
@@ -12,21 +12,22 @@
 
     <Button
         android:id="@+id/mass_class_edit"
-        android:layout_width="238dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/profile_button_style"
         android:text="Mass Class Edit"
         android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_btn"
-        app:layout_constraintVertical_bias="0.786" />
+        app:layout_constraintVertical_bias="0.587" />
 
     <TextView
         android:id="@+id/textView2"
@@ -45,27 +46,26 @@
 
     <Button
         android:id="@+id/classes_btn"
-        android:layout_width="227dp"
+        android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/profile_button_style"
         android:text="View Classes"
         android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.194" />
+        app:layout_constraintVertical_bias="0.102" />
 
 
     <Button
         android:id="@+id/register_btn"
-        android:layout_width="238dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -83,19 +83,20 @@
 
     <Button
         android:id="@+id/clients_btn"
-        android:layout_width="238dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/profile_button_style"
         android:text="View Clients"
         android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_btn"
-        app:layout_constraintVertical_bias="0.272" />
+        app:layout_constraintVertical_bias="0.23" />
 </android.support.constraint.ConstraintLayout>
