--- a/app/src/main/res/layout/user_view.xml
+++ b/app/src/main/res/layout/user_view.xml
@@ -13,6 +13,8 @@
     <TextView
         android:id="@+id/user_name"
         android:layout_width="79dp"
+        android:textStyle="bold"
+        android:textColor="#fff"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -22,6 +24,7 @@
         android:id="@+id/user_surname"
         android:layout_width="138dp"
         android:textStyle="bold"
+        android:textColor="#fff"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
@@ -30,6 +33,8 @@
     <TextView
         android:id="@+id/isActive"
         android:layout_width="45dp"
+        android:textStyle="bold"
+        android:textColor="#fff"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
 
@@ -37,13 +42,17 @@
         android:id="@+id/isActive_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:layout_alignParentTop="true"
+        android:textColor="#fff"
         android:layout_toStartOf="@+id/isActive"
         android:text="Is Active: " />
 
     <TextView
         android:id="@+id/user_id"
         android:layout_width="90dp"
+        android:textColor="#fff"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
