--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -6,19 +6,19 @@
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
 
-
-
-    <Button
-        android:id="@+id/datespinner"
-        android:layout_width="200dp"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/profile_button_style"
-        android:text="@string/date"
-        android:textColor="#000"
+        android:text="Pick A Date"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="46dp" />
+        android:gravity="center"
+        android:textColor="@color/colorPrimary"/>
+
+    <CalendarView
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/app_color_white" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/classView"
