--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -12,12 +12,12 @@
 
     <CheckBox
         android:id="@+id/chkSingleClass"
-        android:layout_width="144dp"
+        android:layout_width="wrap_content"
         android:layout_height="33dp"
-        android:layout_marginTop="252dp"
+        android:layout_marginTop="248dp"
         android:onClick="checkBoxListeners"
         android:text="@string/singleClass"
-        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
-        android:text="@string/class_capacity"
+        android:hint="@string/class_capacity"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -118,107 +118,106 @@
         app:layout_constraintTop_toTopOf="@+id/profile_surname_label" />
 
     <CheckBox
-        android:layout_width="88dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="196dp"
-        android:text="@string/tuesday"
         android:id="@+id/chkTuesday"
-        app:layout_constraintHorizontal_bias="0.054"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginTop="192dp"
+        android:text="@string/tuesday"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:layout_width="88dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="164dp"
-        android:text="@string/monday"
         android:id="@+id/chkMonday"
-        app:layout_constraintHorizontal_bias="0.054"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginTop="160dp"
+        android:text="@string/monday"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/chkThreeMonths"
-        android:layout_width="104dp"
+        android:layout_width="wrap_content"
         android:layout_height="33dp"
         android:layout_marginTop="212dp"
         android:onClick="checkBoxListeners"
         android:text="@string/threeMonths"
-        app:layout_constraintHorizontal_bias="0.721"
+        app:layout_constraintHorizontal_bias="0.763"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <CheckBox
         android:id="@+id/chkOneMonth"
-        android:layout_width="97dp"
+        android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="168dp"
         android:onClick="checkBoxListeners"
         android:text="@string/oneMonth"
-        app:layout_constraintHorizontal_bias="0.703"
+        app:layout_constraintHorizontal_bias="0.784"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
     <CheckBox
-        android:layout_width="88dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="336dp"
-        android:text="@string/sunday"
         android:id="@+id/chkSunday"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginTop="352dp"
+        android:text="@string/sunday"
         app:layout_constraintHorizontal_bias="0.054"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:layout_width="88dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="308dp"
-        android:text="@string/saturday"
         android:id="@+id/chkSaturday"
-        app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-        android:layout_width="88dp"
+        android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:layout_marginTop="280dp"
-        android:text="@string/friday"
-        android:id="@+id/chkFriday"
-        app:layout_constraintHorizontal_bias="0.054"
+        android:layout_marginTop="320dp"
+        android:text="@string/saturday"
+        app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:layout_width="127dp"
+        android:id="@+id/chkFriday"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginTop="288dp"
+        android:text="@string/friday"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/chkWendesday"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="228dp"
         android:text="@string/wendesday"
-        android:id="@+id/chkWendesday"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <CheckBox
-        android:layout_width="102dp"
-        android:layout_height="31dp"
-        android:layout_marginTop="252dp"
-        android:text="@string/thursday"
         android:id="@+id/chkThursday"
-        app:layout_constraintHorizontal_bias="0.054"
+        android:layout_width="wrap_content"
+        android:layout_height="31dp"
+        android:layout_marginTop="256dp"
+        android:text="@string/thursday"
+        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/add_btn"
@@ -239,7 +238,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="@string/profile_name_label"
+        android:hint="@string/profile_name_label"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
